# pixi_for_fun

./: .gitignore  README.md  pixi.toml  pyproject.toml
scripts/: demo.py
src/c_hello/: __init__.py  _c_hello.c
src/pixi_hello.egg-info/: PKG-INFO  SOURCES.txt
