[project]
name = "pixi-hello"
version = "0.1.0"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["c_hello"]
package-dir = {"" = "src"}

[[tool.setuptools.ext-modules]]
name = "c_hello._c_hello"
sources = ["c_hello.c"]
